src/snapshots/mosh__parser__tests__msh2__bad_header.snap
---
source: src/parser.rs
expression: trace
---
parse error:
Parsing Error: ("$MshFmt\r\n2.2 0 8\r\n$EndMeshFormat\r\n$Nodes\r\n", Tag)
