src/snapshots/mosh__parser__tests__msh2__msh2_ascii_header.snap
---
source: src/parser.rs
expression: parse_header(&first_four_lines(path).unwrap()).unwrap()
---
(
    "$Nodes\r\n",
    MshHeader {
        version: V22,
        storage: Ascii,
        size_t: EightBytes,
    },
)
