src/snapshots/mosh__parser__tests__msh2__msh2_binary_header.snap
---
source: src/parser.rs
expression: parse_header(&first_four_lines(path).unwrap()).unwrap()
---
(
    "$EndMeshFormat\n",
    MshHeader {
        version: V22,
        storage: BinaryLe,
        size_t: EightBytes,
    },
)
