src/snapshots/mosh__parser__tests__msh2__node_msh2.snap
---
source: src/parser.rs
expression: parse_node_msh2(i).unwrap().1
---
Node {
    tag: 1201,
    x: 0.0,
    y: 0.0,
    z: 1.0,
}
