src/snapshots/mosh__parser__tests__msh2__some_nodes.snap
---
source: src/parser.rs
expression: parse_node_section_msh2(i).unwrap().1
---
[
    Node {
        tag: 1,
        x: 0.0,
        y: 0.0,
        z: 1.0,
    },
    Node {
        tag: 2,
        x: 1.0,
        y: 1.0,
        z: 1.0,
    },
    Node {
        tag: 100,
        x: 1.0,
        y: 1.0,
        z: 1.0,
    },
]
