src/snapshots/mosh__parser__tests__msh2__unix_line_endings.snap
---
source: src/parser.rs
expression: parse_header(&first_four_lines(path).unwrap()).unwrap()
---
(
    "\n$EndMeshFormat\n$Nodes\n",
    MshHeader {
        version: V22,
        storage: Ascii,
        size_t: EightBytes,
    },
)
